--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "browser_action": {
       "default_title": "Swap words with kanji words for added immersion",
-      "default_icon": "icon.png"
+      "default_icon": "go.png"
   },
   "background": {
 	"page":"background.html",
